kubernetes/service.yml
apiVersion: v1
metadata:
 name: pet-shop-security-service
kind: Service
spec:
  selector:
   app: pet-shop-security
  ports:
  - port: 31002 #a porta deve ser maior que 31000
    nodePort: 31002
    targetPort: ps-sec-port
    protocol: TCP
  selector:  #service para o pod com o label app helloworld
    app: pet-shop-security #service para o pod com o label app helloworld
  type: NodePort
